[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprite/Stage1/mmzx_controlroom.png" type="Texture" id=1]
[ext_resource path="res://sprite/Stage1/bg.png" type="Texture" id=2]
[ext_resource path="res://sprite/Stage1/vent-sprite.png" type="Texture" id=3]
[ext_resource path="res://script/Mission_1/MS1_Intro.gd" type="Script" id=4]
[ext_resource path="res://scene/Chat_Dialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://video/Mission1/intro.ogv" type="VideoStream" id=6]
[ext_resource path="res://script/Data.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 1.5
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Normal"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.635294, 0.635294, 1 ), Color( 0.992157, 0.235294, 0.235294, 1 ), Color( 1, 0.635294, 0.635294, 1 ) ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 313, 688 )
scale = Vector2( 2.50815, 5.36273 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 462.5, 301 )
scale = Vector2( 2.50815, 2.99 )
texture = ExtResource( 1 )

[node name="Player" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 397, 349 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
flip_h = true
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/Idle = SubResource( 1 )

[node name="Chat_Dialog" parent="." instance=ExtResource( 5 )]
bb_top = [ "X...! Are you there?", "There was an abnormal flow of energy in the southern forest, so hurry there to confirm it.", "Be careful!" ]
bb_bot = [ "Yes. What's going on?", "Okay, I'll go right away!", "Don't worry!" ]
order = [ true, false, true, false, true, false ]
avatars = [ "system.png", "vent_2.png", "system.png", "vent_2.png", "system.png", "vent_1.png" ]
labels = [ "System", "X", "System", "X", "System", "X" ]

[node name="Timer_Chat" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer_Audio" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Video" type="VideoPlayer" parent="."]
visible = false
margin_left = -135.0
margin_top = -16.0
margin_right = 933.0
margin_bottom = 621.0
stream = ExtResource( 6 )
volume_db = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Normal = SubResource( 2 )
anims/Warning = SubResource( 3 )
[connection signal="timeout" from="Timer_Chat" to="." method="_on_Timer_Chat_timeout"]
[connection signal="timeout" from="Timer_Audio" to="." method="_on_Timer_Audio_timeout"]
[connection signal="finished" from="Video" to="." method="_on_Video_finished"]
